[package]
name = "pg-noop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pgnoop"
path = "src/main.rs"

[dependencies]
pgwire = { version = "0.38", default-features = false, features = ["server-api-ring"] }
postgres-types = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "time"] }
async-trait = "0.1"
futures = "0.3"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
