[package]
name = "pg-noop"
version = "0.1.0"
edition = "2021"
description = "NoOp PostgreSQL blackhole server for benchmarking"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stroppy-io/pg-noop"
keywords = ["postgresql", "benchmark", "database", "noop", "blackhole"]
categories = ["database", "command-line-utilities"]

[[bin]]
name = "pgnoop"
path = "src/main.rs"

[dependencies]
pgwire = { version = "0.38", default-features = false, features = ["server-api-ring"] }
postgres-types = "0.2"
tikv-jemallocator = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "time"] }
async-trait = "0.1"
futures = "0.3"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
